--- a/SERVER/Routers/WEB-PAGE/styles/main.css
+++ b/SERVER/Routers/WEB-PAGE/styles/main.css
@@ -65,6 +65,19 @@ header {
   transform: translateY(-70%);
 }
 
+.search {
+  margin: 1.5rem;
+  margin-left: 3.5rem;
+}
+.search input {
+  width: 35rem;
+  font-size: 1.7rem;
+}
+.search .icon {
+  font-size: 2rem;
+  cursor: pointer;
+}
+
 .logo-image {
   height: 5rem;
   width: 6rem;
