--- a/SERVER/Routers/WEB-PAGE/styles/layout/_header.scss
+++ b/SERVER/Routers/WEB-PAGE/styles/layout/_header.scss
@@ -25,11 +25,19 @@ header {
 
     input {
         width: 35rem;
-        font-size: 1.7rem;
+        font-size: 2rem;
     }
 
     .icon {
         font-size: 2rem;
         cursor: pointer;
     }
+}
+
+.user {
+    margin-left: 2.5rem;
+    font-size:1.5rem;
+    margin-top: 10%;
+    transform: translateY(-105%);
+    cursor: pointer;
 }
