--- a/SERVER/Routers/WEB-PAGE/styles/main.css
+++ b/SERVER/Routers/WEB-PAGE/styles/main.css
@@ -50,27 +50,28 @@ table {
 header {
   display: flex;
   flex-direction: row;
-  margin: 1.5rem;
+  border-bottom: 2px black solid;
+  margin: 1rem;
+  padding: 1rem;
+}
+header * {
+  margin: auto;
 }
 
 .logo {
   display: flex;
   flex-direction: row;
 }
+.logo img {
+  margin-top: -0.5rem;
+}
 .logo h1 {
   font-family: "Shadows Into Light", cursive;
   font-size: 3rem;
-  height: 100%;
-  margin-top: 50%;
-  transform: translateY(-70%);
 }
 
-.search {
-  margin: 1.5rem;
-  margin-left: 3.5rem;
-}
 .search input {
-  width: 35rem;
+  width: 50vw;
   font-size: 2rem;
 }
 .search .icon {
@@ -79,13 +80,19 @@ header {
 }
 
 .user {
-  margin-left: 2.5rem;
   font-size: 1.5rem;
-  margin-top: 10%;
-  transform: translateY(-105%);
   cursor: pointer;
 }
 
+@media (max-width: 80rem) {
+  header {
+    display: flex;
+    flex-direction: column;
+  }
+  header * {
+    margin-top: 10px;
+  }
+}
 .logo-image {
   height: 5rem;
   width: 6rem;
