Implemented new mixin for border only on the bottom

--- a/SERVER/Routers/WEB-PAGE/styles/utils/_mixins.scss
+++ b/SERVER/Routers/WEB-PAGE/styles/utils/_mixins.scss
@@ -22,3 +22,14 @@
         background: linear-gradient(360deg, $main-color, $secondary-color);
     }
 }
+
+@mixin border-bottom {
+    
+    position: relative;
+    background: white;
+
+    background-clip: padding-box;
+    border-bottom: solid 2px transparent;
+    border-image: linear-gradient(to left, $main-color, $secondary-color) 1 0;
+    
+}
