Created new file for buttons related styles

--- a/SERVER/Routers/WEB-PAGE/styles/main.css
+++ b/SERVER/Routers/WEB-PAGE/styles/main.css
@@ -107,6 +107,19 @@ header * {
   width: 6rem;
 }
 
+.blue-purple-btn {
+  margin-bottom: 10px;
+  background: linear-gradient(45deg, rgb(128, 0, 255), royalblue);
+  font-size: 1.25rem;
+  color: white;
+  border: 2px black solid;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.blue-purple-btn:hover {
+  background: linear-gradient(45deg, royalblue, rgb(128, 0, 255));
+}
+
 .register-body {
   width: 15rem;
   margin: auto;
