Minor changes to styles

--- a/SERVER/Routers/WEB-PAGE/styles/layout/_header.scss
+++ b/SERVER/Routers/WEB-PAGE/styles/layout/_header.scss
@@ -7,6 +7,8 @@ header {
     margin: 1rem;
     padding: 1rem;
 
+    background-color: whitesmoke;
+    
     * {
         margin: auto;
     }
@@ -33,6 +35,7 @@ header {
     }
 
     .icon {
+        margin-left: 0.5rem;
         font-size: 2rem;
         cursor: pointer;
     }
