--- a/SERVER/Routers/WEB-PAGE/styles/main.css
+++ b/SERVER/Routers/WEB-PAGE/styles/main.css
@@ -58,6 +58,7 @@ header {
      border-image: linear-gradient(to left, rgb(128, 0, 255), royalblue) 1 0;
   margin: 1rem;
   padding: 1rem;
+  background-color: whitesmoke;
 }
 header * {
   margin: auto;
@@ -80,6 +81,7 @@ header * {
   font-size: 2rem;
 }
 .search .icon {
+  margin-left: 0.5rem;
   font-size: 2rem;
   cursor: pointer;
 }
@@ -98,6 +100,10 @@ header * {
     margin-top: 10px;
   }
 }
+body {
+  background-color: whitesmoke;
+}
+
 .body {
   width: 100%;
 }
