Fixed header media query

--- a/SERVER/Routers/WEB-PAGE/styles/layout/_header.scss
+++ b/SERVER/Routers/WEB-PAGE/styles/layout/_header.scss
@@ -17,6 +17,7 @@ header {
 .logo {
     display: flex;
     flex-direction: row;
+    cursor: pointer;
 
     img {
         margin-top: -0.5rem;
@@ -46,7 +47,7 @@ header {
     cursor: pointer;
 }
 
-@media (max-width: 80rem){
+@media (max-width: 85rem){
     header {
         display: flex;
         flex-direction: column;
