--- a/SERVER/Routers/WEB-PAGE/styles/main.css
+++ b/SERVER/Routers/WEB-PAGE/styles/main.css
@@ -272,4 +272,19 @@ body {
 .user-info h2 {
   width: 30rem;
   font-size: 1.25rem;
+}
+
+.profile-body {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  margin: auto;
+  margin-top: 1rem;
+}
+.profile-body .card {
+  margin: auto;
+  margin-top: 1rem;
+  height: 25rem;
+  width: 15rem;
+  border: 3px black solid;
 }/*# sourceMappingURL=main.css.map */
