--- a/SERVER/Routers/WEB-PAGE/styles/pages/_profile.scss
+++ b/SERVER/Routers/WEB-PAGE/styles/pages/_profile.scss
@@ -48,7 +48,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
     margin: auto;
-    margin-top: 1rem;
+    margin: 1rem;
 
 
     .card {
