--- a/SERVER/Routers/WEB-PAGE/styles/main.css
+++ b/SERVER/Routers/WEB-PAGE/styles/main.css
@@ -280,7 +280,6 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
   margin: auto;
-  margin: 1rem;
 }
 .profile-body .card {
   margin: auto;
@@ -288,4 +287,43 @@ body {
   height: 25rem;
   width: 15rem;
   border: 3px black solid;
+}
+
+@media (max-width: 50rem) {
+  .profile-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .background img {
+    aspect-ratio: 16/9;
+    width: 20rem;
+    height: 7.5rem;
+    border-radius: 30px;
+  }
+
+  .profile-picture {
+    position: absolute;
+    margin-top: 5rem;
+  }
+  .profile-picture img {
+    aspect-ratio: 1/1;
+    width: 3.75rem;
+    height: 3.75rem;
+    border: 2px whitesmoke solid;
+    border-radius: 50px;
+  }
+
+  .user-info {
+    margin-top: 1.25rem;
+    text-align: center;
+  }
+  .user-info h1 {
+    font-size: 1.25rem;
+  }
+  .user-info h2 {
+    width: 15rem;
+    font-size: 1rem;
+  }
 }/*# sourceMappingURL=main.css.map */
