--- a/SERVER/Routers/WEB-PAGE/styles/main.css
+++ b/SERVER/Routers/WEB-PAGE/styles/main.css
@@ -276,17 +276,61 @@ body {
 }
 
 .profile-body {
-  width: 100%;
+  width: 80%;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
   margin: auto;
+  margin-bottom: 1rem;
 }
 .profile-body .card {
   margin: auto;
   margin-top: 1rem;
   height: 25rem;
   width: 15rem;
-  border: 3px black solid;
+  position: relative;
+  background: white;
+  background-clip: padding-box;
+  border: solid 5px transparent;
+  border-radius: 0.8rem;
+  cursor: pointer;
+}
+.profile-body .card:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  margin: -5px;
+  border-radius: inherit;
+  background: linear-gradient(360deg, rgb(128, 0, 255), royalblue);
+}
+.profile-body .card img {
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 16/9;
+  border-radius: 0.5rem;
+  transition: 0.3s;
+}
+.profile-body .card .card-title {
+  position: absolute;
+  inset: 0;
+  font-size: 1.5rem;
+  text-align: center;
+  padding: 1rem;
+  background-color: rgba(255, 255, 255, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.3s;
+  opacity: 0;
+}
+.profile-body .card:hover img {
+  filter: blur(5px);
+}
+.profile-body .card:hover .card-title {
+  opacity: 1;
 }
 
 @media (max-width: 50rem) {
