--- a/SERVER/Routers/WEB-PAGE/styles/pages/_profile.scss
+++ b/SERVER/Routers/WEB-PAGE/styles/pages/_profile.scss
@@ -44,17 +44,52 @@
 
 .profile-body {
 
-    width: 100%;
+    width: 80%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
     margin: auto;
+    margin-bottom: 1rem;
 
     .card {
         margin: auto;
         margin-top: 1rem;
         height: 25rem;
         width: 15rem;
-        border: 3px black solid;
+        @include border();
+        cursor: pointer;
+        
+        img {
+            width: 100%;
+            height: 100%;
+            aspect-ratio: 16 / 9;
+            border-radius: 0.5rem;
+            transition: 0.3s;
+        }
+
+        .card-title {
+            position: absolute;
+            inset: 0;
+            font-size: 1.5rem;
+            text-align: center;
+            padding: 1rem;
+            background-color: rgba(255, 255, 255, 0.4);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transition: 0.3s;
+            opacity: 0;
+        }
+
+        &:hover {
+
+            img {
+                filter: blur(5px);
+            }
+
+            .card-title {
+                opacity: 1;
+            }
+        }
     }
 }
 
