--- a/SERVER/Routers/WEB-PAGE/styles/pages/_profile.scss
+++ b/SERVER/Routers/WEB-PAGE/styles/pages/_profile.scss
@@ -11,7 +11,7 @@
         aspect-ratio: 16/9;
         width: 40rem;
         height: 15rem;
-        border-radius: 30px;
+        border-radius: 15px;
     }
 }
 
@@ -24,7 +24,7 @@
         width: 7.5rem;
         height: 7.5rem;
         border: 4px whitesmoke solid;
-        border-radius: 50px;
+        border-radius: 50%;
     }
 }
 
