Made a first implementation for the show creator styles

--- a/SERVER/Routers/WEB-PAGE/styles/main.css
+++ b/SERVER/Routers/WEB-PAGE/styles/main.css
@@ -434,4 +434,36 @@ input[type=file] {
   border-radius: 50%;
   aspect-ratio: 1/1;
   margin: auto;
+}
+
+.show-creater-body {
+  display: flex;
+  flex-direction: row;
+  width: 70rem;
+  margin: auto;
+}
+.show-creater-body * {
+  margin: auto;
+}
+
+.show-inputs {
+  width: 30rem;
+  height: 50rem;
+  display: inline-flexbox;
+  border: 3px black solid;
+  text-align: center;
+}
+
+.show-preview {
+  width: 30rem;
+  height: 50rem;
+  display: inline-flexbox;
+  text-align: center;
+  border: 3px black solid;
+}
+
+.show-creator-submit {
+  display: flex;
+  margin: auto;
+  font-size: 1.5rem;
 }/*# sourceMappingURL=main.css.map */
