--- a/SERVER/Routers/WEB-PAGE/styles/main.css
+++ b/SERVER/Routers/WEB-PAGE/styles/main.css
@@ -448,7 +448,7 @@ input[type=file] {
 
 .show-inputs {
   width: 30rem;
-  height: 50rem;
+  height: 40rem;
   display: inline-flexbox;
   border: 3px black solid;
   text-align: center;
@@ -456,7 +456,7 @@ input[type=file] {
 
 .show-preview {
   width: 30rem;
-  height: 50rem;
+  height: 40rem;
   display: inline-flexbox;
   text-align: center;
   border: 3px black solid;
@@ -465,5 +465,33 @@ input[type=file] {
 .show-creator-submit {
   display: flex;
   margin: auto;
-  font-size: 1.5rem;
+  font-size: 2rem;
+}
+
+@media (max-width: 70rem) {
+  .show-creater-body {
+    width: 100%;
+  }
+
+  .show-preview {
+    display: none;
+  }
+
+  .show-inputs {
+    display: flex;
+    flex-direction: column;
+    width: 30rem;
+    height: 50rem;
+    margin: auto;
+  }
+  .show-inputs * {
+    font-size: 2rem;
+    margin: 10px;
+  }
+  .show-inputs button {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    margin: auto;
+  }
 }/*# sourceMappingURL=main.css.map */
