--- a/SERVER/Routers/WEB-PAGE/styles/pages/_show-creator.scss
+++ b/SERVER/Routers/WEB-PAGE/styles/pages/_show-creator.scss
@@ -11,15 +11,16 @@
 
 .show-inputs {
     width: 30rem;
-    height: 50rem;
+    height: 40rem;
     display: inline-flexbox;
     border: 3px black solid;
     text-align: center;
+
 }
 
 .show-preview {
     width: 30rem;
-    height: 50rem;
+    height: 40rem;
     display: inline-flexbox;
     text-align: center;
     border: 3px black solid;
@@ -29,5 +30,33 @@
 .show-creator-submit {
     display: flex;
     margin: auto;
-    font-size: 1.5rem;
+    font-size: 2rem;
+}
+
+@media (max-width: 70rem){
+    .show-creater-body {
+        width: 100%;
+    }
+
+    .show-preview {
+        display: none;
+    }
+
+    .show-inputs {
+        display: flex;
+        flex-direction: column;
+        width: 30rem;
+        height: 50rem;
+        margin: auto;
+        
+        * {
+            font-size: 2rem;
+            margin: 10px;
+        }
+
+        button {
+            width: fit-content;
+            margin: auto;
+        }
+    }
 }
