--- a/SERVER/Routers/WEB-PAGE/styles/main.css
+++ b/SERVER/Routers/WEB-PAGE/styles/main.css
@@ -450,8 +450,25 @@ input[type=file] {
   width: 30rem;
   height: 40rem;
   display: inline-flexbox;
-  border: 3px black solid;
   text-align: center;
+  position: relative;
+  background: white;
+  background-clip: padding-box;
+  border: solid 5px transparent;
+  border-radius: 0.8rem;
+  background-color: whitesmoke;
+}
+.show-inputs:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  margin: -5px;
+  border-radius: inherit;
+  background: linear-gradient(360deg, rgb(128, 0, 255), royalblue);
 }
 
 .show-preview {
@@ -459,7 +476,24 @@ input[type=file] {
   height: 40rem;
   display: inline-flexbox;
   text-align: center;
-  border: 3px black solid;
+  position: relative;
+  background: white;
+  background-clip: padding-box;
+  border: solid 5px transparent;
+  border-radius: 0.8rem;
+  background-color: whitesmoke;
+}
+.show-preview:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  margin: -5px;
+  border-radius: inherit;
+  background: linear-gradient(360deg, rgb(128, 0, 255), royalblue);
 }
 
 .show-creator-submit {
@@ -478,11 +512,28 @@ input[type=file] {
   }
 
   .show-inputs {
+    position: relative;
+    background: white;
+    background-clip: padding-box;
+    border: solid 5px transparent;
+    border-radius: 0.8rem;
     display: flex;
     flex-direction: column;
     width: 30rem;
     height: 50rem;
     margin: auto;
+  }
+  .show-inputs:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    margin: -5px;
+    border-radius: inherit;
+    background: linear-gradient(360deg, rgb(128, 0, 255), royalblue);
   }
   .show-inputs * {
     font-size: 2rem;
