--- a/SERVER/Routers/WEB-PAGE/styles/pages/_show-creator.scss
+++ b/SERVER/Routers/WEB-PAGE/styles/pages/_show-creator.scss
@@ -1,3 +1,5 @@
+@use '../utils/' as *;
+
 .show-creater-body {
     display: flex;
     flex-direction: row;
@@ -13,17 +15,21 @@
     width: 30rem;
     height: 40rem;
     display: inline-flexbox;
-    border: 3px black solid;
     text-align: center;
 
+    @include border();
+    background-color: whitesmoke;
 }
 
 .show-preview {
+
     width: 30rem;
     height: 40rem;
     display: inline-flexbox;
     text-align: center;
-    border: 3px black solid;
+    
+    @include border();
+    background-color: whitesmoke;
 }
 
 
@@ -43,6 +49,7 @@
     }
 
     .show-inputs {
+        @include border();
         display: flex;
         flex-direction: column;
         width: 30rem;
