--- a/SERVER/Routers/WEB-PAGE/styles/pages/_show-creator.scss
+++ b/SERVER/Routers/WEB-PAGE/styles/pages/_show-creator.scss
@@ -59,6 +59,15 @@
     
     @include border();
     background-color: whitesmoke;
+
+    img {
+        margin: auto;
+        height: 30rem;
+        width: 20rem;
+        aspect-ratio: 16/9;
+        border: 3px black solid;
+        border-radius: 0.8rem;
+    }
 }
 
 
@@ -83,6 +92,15 @@
         width: 25rem;
         height: 35rem;
         margin: auto;
+
+        img {
+            margin: auto;
+            height: 25rem;
+            width: 17.5;
+            aspect-ratio: 16/9;
+            border: 3px black solid;
+            border-radius: 0.8rem;
+        }
     }
 
     .show-inputs {
