--- a/WEB-PAGE/styles/main.css
+++ b/WEB-PAGE/styles/main.css
@@ -221,18 +221,24 @@ body {
   width: fit-content;
   margin: auto;
   text-align: center;
+  font-family: "Fredericka the Great", cursive;
+  background-image: linear-gradient(360deg, rgb(128, 0, 255), royalblue);
+  -webkit-background-clip: text;
+          background-clip: text;
+  -webkit-text-fill-color: transparent;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .not-found * {
   margin: 10px;
 }
 .not-found h1 {
-  font-size: 3.5rem;
+  font-size: 5rem;
 }
-.not-found h3 {
-  font-size: 2rem;
-}
-.not-found button {
-  font-size: 2rem;
+.not-found h2 {
+  font-size: 3rem;
 }
 
 .profile-header {
