--- a/WEB-PAGE/styles/pages/_404.scss
+++ b/WEB-PAGE/styles/pages/_404.scss
@@ -1,21 +1,30 @@
+@use '../utils/' as *;
+
 .not-found {
     width: fit-content;
     margin: auto;
     text-align: center;
+    font-family: $not-found-font;
+    background-image: linear-gradient(360deg, $main-color, $secondary-color);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    
 
     * {
         margin: 10px;
     }
 
     h1 {
-        font-size: 3.5rem;
+        font-size: 5rem;
     }
 
-    h3 {
-        font-size: 2rem;
-    }
-
-    button {
-        font-size: 2rem;
+    h2 {
+        font-size: 3rem;
     }
 }
