--- a/WEB-PAGE/styles/main.css
+++ b/WEB-PAGE/styles/main.css
@@ -125,6 +125,47 @@ body {
   background: linear-gradient(45deg, royalblue, rgb(128, 0, 255));
 }
 
+.dropbtn {
+  background-color: lightblue;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: lightblue;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px black;
+  border-radius: 10px;
+  z-index: 1;
+}
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-content a:hover {
+  background-color: lightskyblue;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.dropdown:hover .dropbtn {
+  background-color: lightskyblue;
+}
+
 .register-body {
   width: 15rem;
   margin: auto;
