Minor changes to the dropdown colours

--- a/WEB-PAGE/styles/utils/_colors.scss
+++ b/WEB-PAGE/styles/utils/_colors.scss
@@ -1,3 +1,4 @@
  $body-color: whitesmoke;
  $main-color: rgb(128, 0, 255);
  $secondary-color: royalblue;
+ $light-secondary-color: rgba(65, 105, 225, 0.7);
