--- a/WEB-PAGE/styles/components/_dropdown.scss
+++ b/WEB-PAGE/styles/components/_dropdown.scss
@@ -1,7 +1,7 @@
 @use '../utils/' as *;
 
 .dropbtn {
-    background-color: lightblue;
+    background-color: $secondary-color;
     color: white;
     padding: 16px;
     font-size: 16px;
@@ -18,7 +18,7 @@
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: lightblue;
+    background-color: $light-secondary-color;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px black;
     border-radius: 10px;
@@ -31,7 +31,7 @@
         display: block;
 
         &:hover {
-            background-color: lightskyblue;
+            background-color: $light-secondary-color;
         }
     }
 }
@@ -42,6 +42,6 @@
     }
 
     .dropbtn {
-        background-color: lightskyblue;
+        background-color: $secondary-color;
     }
 }
