--- a/WEB-PAGE/styles/main.css
+++ b/WEB-PAGE/styles/main.css
@@ -126,7 +126,7 @@ body {
 }
 
 .dropbtn {
-  background-color: lightblue;
+  background-color: royalblue;
   color: white;
   padding: 16px;
   font-size: 16px;
@@ -143,7 +143,7 @@ body {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: lightblue;
+  background-color: rgba(65, 105, 225, 0.7);
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px black;
   border-radius: 10px;
@@ -156,14 +156,14 @@ body {
   display: block;
 }
 .dropdown-content a:hover {
-  background-color: lightskyblue;
+  background-color: rgba(65, 105, 225, 0.7);
 }
 
 .dropdown:hover .dropdown-content {
   display: block;
 }
 .dropdown:hover .dropbtn {
-  background-color: lightskyblue;
+  background-color: royalblue;
 }
 
 .register-body {
