--- a/WEB-PAGE/styles/main.css
+++ b/WEB-PAGE/styles/main.css
@@ -154,6 +154,7 @@ body {
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  cursor: pointer;
 }
 .dropdown-content a:hover {
   background-color: rgba(65, 105, 225, 0.7);
