--- a/WEB-PAGE/styles/main.css
+++ b/WEB-PAGE/styles/main.css
@@ -84,6 +84,10 @@ table {
   text-align: center;
 }
 
+.password-changer-body h1 {
+  font-size: 1.75rem;
+}
+
 .user-info h1 {
   font-size: 2.5rem;
 }
