Finished the styles for the show page, except for the comments part

--- a/WEB-PAGE/styles/main.css
+++ b/WEB-PAGE/styles/main.css
@@ -709,18 +709,37 @@ input[type=file] {
   height: 80vh;
   width: 25vw;
   border: 2px black solid;
+  margin: 5px;
+}
+.show-image img {
+  height: 100%;
+  width: 100%;
+  border-radius: 25px;
 }
 
 .show-contents {
   height: 80vh;
   width: 25vw;
   border: 2px black solid;
+  margin: 5px;
 }
 
 .show-details {
   height: 50%;
   width: 100%;
   border: 2px black solid;
+}
+.show-details p {
+  width: 95%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  background-color: rgba(111, 111, 111, 0.2);
+  margin: auto;
+  margin-top: 5px;
+  border-radius: 10px;
+  text-align: center;
+  font-size: 1.5rem;
 }
 
 .show-comments {
