--- a/WEB-PAGE/styles/main.css
+++ b/WEB-PAGE/styles/main.css
@@ -708,26 +708,57 @@ input[type=file] {
 .show-image {
   height: 80vh;
   width: 25vw;
-  border: 2px black solid;
   margin: 5px;
+  position: relative;
+  background: white;
+  background-clip: padding-box;
+  border: solid 5px transparent;
+  border-radius: 0.8rem;
+}
+.show-image:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  margin: -5px;
+  border-radius: inherit;
+  background: linear-gradient(360deg, rgb(128, 0, 255), royalblue);
 }
 .show-image img {
   height: 100%;
   width: 100%;
-  border-radius: 25px;
+  border-radius: 8px;
 }
 
 .show-contents {
   height: 80vh;
   width: 25vw;
-  border: 2px black solid;
   margin: 5px;
+  position: relative;
+  background: white;
+  background-clip: padding-box;
+  border: solid 5px transparent;
+  border-radius: 0.8rem;
+}
+.show-contents:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  margin: -5px;
+  border-radius: inherit;
+  background: linear-gradient(360deg, rgb(128, 0, 255), royalblue);
 }
 
 .show-details {
   height: 50%;
   width: 100%;
-  border: 2px black solid;
 }
 .show-details p {
   width: 95%;
@@ -745,10 +776,16 @@ input[type=file] {
 .show-comments {
   height: 49%;
   width: 100%;
-  border: 2px black solid;
   overflow: scroll;
   scrollbar-width: none;
 }
 .show-comments::-webkit-scrollbar {
   display: none;
+}
+
+.bar {
+  height: 1px;
+  width: 90%;
+  background-color: black;
+  margin: auto;
 }/*# sourceMappingURL=main.css.map */
