--- a/WEB-PAGE/styles/pages/_show.scss
+++ b/WEB-PAGE/styles/pages/_show.scss
@@ -32,6 +32,14 @@
     height: 50%;
     width: 100%;
 
+    overflow: scroll;
+
+    scrollbar-width: none;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
+
     p {
         width: 95%;
         height: fit-content;
