Implemented a structure for the comments section

--- a/WEB-PAGE/styles/main.css
+++ b/WEB-PAGE/styles/main.css
@@ -783,6 +783,30 @@ input[type=file] {
   display: none;
 }
 
+.comment {
+  display: flex;
+  flex-direction: row;
+  height: 4rem;
+  width: 90%;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+}
+.comment img {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.comment p {
+  height: 2.5rem;
+  overflow: scroll;
+  margin-left: 5px;
+}
+.comment p::-webkit-scrollbar {
+  display: none;
+}
+
 .bar {
   height: 1px;
   width: 90%;
